[package]
name = "acvm-backend-groth16"
version = "0.1.0"
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"

[dependencies]
acvm = "0.17.0"
arkworks_backend = { git = "https://github.com/noir-lang/arkworks_backend", rev = "2f0a1d649dd807a577cc1c082c76a53539caf4e1", default-features = false }
ark-groth16 = "0.4.0"

ark-snark = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", features = ["std", "getrandom"] }
ark-serialize = { version = "0.4.0", default-features = false, features = ["derive"] }

thiserror = "1.0.21"

[features]
default = ["bn254"]
bn254 = ["acvm/bn254", "arkworks_backend/bn254"]
bls12_381 = ["acvm/bls12_381", "arkworks_backend/bls12_381"]
